# rust-backend-template

./: Cargo.toml  cargo-generate.toml
.github/workflows/: build.yaml
docker/: Dockerfile
src/: create.sql  main.rs
src/app/: run.rs
src/common/: macros.rs
src/config/: app_config.rs  cli.rs  mod.rs
src/error/: app_error.rs
src/handler/: echo_handler.rs
src/logger/: log.rs
src/middleware/: log.rs
src/vojo/: app_state.rs  base_response.rs  mod.rs
