[package]
name = "rust-backend-template"
version = "0.1.0"
edition = "2024"


[features]
default = []
dev = []
test_env = []
prod = []

[dependencies]
aes-gcm = "=0.10.3"
anyhow = "=1.0.100"
axum = { version = "=0.8.7", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "=0.12.2", features = ["typed-header"] }
base64 = "=0.22.1"
bcrypt = "=0.17.1"
chrono = { version = "=0.4.42", features = ["serde"] }
chrono-tz = "=0.10.4"
# CLI 和配置文件支持
clap = { version = "=4.5.31", features = ["derive"] }
futures = "=0.3.31"
hex = "=0.4.3"
hmac = "=0.12.1"
hound = "=3.5.1"
http = "=1.4.0"
http-body-util = "=0.1.0"
indexmap = "=2.12.1"
# 假设我们用JWT做认证
jsonwebtoken = { version = "=10.2.0", features = ["rust_crypto"] }
mime_guess = "=2.0.5"
once_cell = "=1.21.3"
pem = "=3.0.4"
rand = "=0.9.2"
regex = "=1.12.2"
reqwest = { version = "=0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rsa = { version = "=0.9.8", features = ["sha2"] }
rust-embed = "=8.9.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
serde_yaml = "=0.9.34+deprecated"
sha1 = "=0.10.6"
sha2 = "=0.10.8"

# 添加一些用于数据库和状态管理的辅助 crate
sqlx = { version = "=0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
    "uuid",
] }
strsim = "=0.11.1"
tempfile = "=3.23.0"
tokio = { version = "=1.48.0", features = ["full"] }
tokio-stream = "=0.1.17"
tokio-util = "=0.7.17"
tower = { version = "=0.5.2", features = ["full"] }
tower-http = { version = "=0.6.7", features = ["fs", "trace", "cors"] }
tracing = "=0.1.41"
tracing-appender = "=0.2.4"


tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
url = "=2.5.4"
urlencoding = "=2.1.3"
uuid = { version = "=1.18.1", features = ["v4", "v7"] }
validator = "=0.20.0"
validator_derive = "=0.20.0"
walkdir = "=2.5.0"
